--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,30 @@ services:
     container_name: neo4j-local
     restart: unless-stopped
     ports:
-      - "7474:7474"   # HTTP / Browser
-      - "7687:7687"   # Bolt
+      - "7474:7474" # HTTP / Browser
+      - "7687:7687" # Bolt
     environment:
-      NEO4J_AUTH: "neo4j/testpassword"  # change le mot de passe ici
-      NEO4JLABS_PLUGINS: '["apoc","graph-data-science"]'  # plugins utiles si tu veux
+      NEO4J_AUTH: "neo4j/testpassword"
+      NEO4JLABS_PLUGINS: '["apoc","graph-data-science"]'
     volumes:
       - neo4j_data:/data
       - neo4j_import:/var/lib/neo4j/import
 
+  web:
+    build: .
+    ports:
+      - "5000:5000"
+    environment:
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=testpassword
+    depends_on:
+      - neo4j
+    volumes:
+      - .:/app
+
 volumes:
   neo4j_data:
   neo4j_import:
+
+
